# spur-python

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yaml
docs/: .pages  index.md  reference.md
examples/: spur_pipeline.py  spurhalflife.py  spurtest.py  spurtransform.py
src/spur/: __init__.py  core.py  types.py
src/spur/assets/: chetty.csv
src/spur/utils/: __init__.py  data.py  dist.py  formula.py  inference.py  matrix.py  summary.py
tests/: config.py  test_cholesky_upper.py  test_cluster_matrix.py  test_demean_matrix.py  test_get_R.py  test_get_cbar.py  test_get_distance_matrix.py  test_get_ha_param_i0.py  test_get_ha_param_i1.py  test_get_ha_param_i1_residual.py  test_get_pow_qf.py  test_get_sigma_dm.py  test_get_sigma_lbm.py  test_get_sigma_residual.py  test_get_transformation_stats.py  test_haversine_distance.py  test_iso_matrix.py  test_lbmgls_matrix.py  test_load_chetty_data.py  test_lvech.py  test_nn_matrix.py  test_normalized_distmat.py  test_spur.py  test_spur_persistence.py  test_spur_utils.py  test_spurhalflife.py  test_spurtest.py  test_spurtest_i0.py  test_spurtest_i0resid.py  test_spurtest_i1.py  test_spurtest_i1resid.py  test_spurtransform.py  test_standardize.py  test_transform.py  utils.py
