[project]
name = "spur-python"
version = "0.1.1"
description = "Spatial error dependence diagnostics and corrections based on Müller-Watson, Econometrica 2024"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sascha O. Becker" },
    { name = "P. David Boll" },
    { name = "Hans-Joachim Voth" },
]
license = "MIT"
keywords = [
    "spatial econometrics",
    "econometrics",
    "economics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scpc-python>=0.1.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "ty>=0.0.31",
]

[project.urls]
Paper = "https://pauldavidboll.com/SPUR_Stata_Journal_website.pdf"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"                 

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spur = ["assets/*.csv"]
